fix html and css

--- a/calculator.html
+++ b/calculator.html
@@ -1,4 +1,16 @@
-<div class='container'>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Calculator</title>
+  <meta charset="UTF-8">
+  <link href='https://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Josefin+Sans' rel='stylesheet' type='text/css'>
+  <link href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css' rel='stylesheet' type='text/css'>
+  <link href="calculator.css" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+  <div class='container'>
   <div id='calculator'>
 
     <!-- TITLE -->
@@ -62,3 +74,6 @@
         Justin Woodward</a>
   </div>
 </footer>
+
+</body>
+</html>
